--- a/step25_Ans.ipynb
+++ b/step25_Ans.ipynb
@@ -32,7 +32,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "## STEP25. 물건 개수와 가격 계산 코드 짜기"
+        "## STEP25. 물건 개수와 가격 계산 코드 짜기 / API 로 가져온 가격 활용하기\n"
       ]
     },
     {
@@ -94,104 +94,50 @@
       "metadata": {
         "id": "rC1HHUiBXHXU",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "24b7a6d2-b5e5-4a0b-9716-32592bbff89a"
       },
       "cell_type": "code",
       "source": [
-        "# Q-2. input() 함수로 하나의 숫자를 입력받아서 홀수와 짝수를 구별하여 출력하는 코드를 작성하세요.\n",
-        "# input() 함수를 사용합니다. \n",
-        "# \"숫자를 입력하세요 :\" 라는 문구가 출력된 후 수를 입력받습니다.\n",
+        "# Q-2. \n",
+        "# \n",
+        "# btc 딕셔너리 안에는 시가, 종가, 최고가, 최저가 등이 저장되어 있다. \n",
+        "# 최고가와 최저가의 차이를 변동폭으로 정의할 때 (시가 + 변동폭)이 \n",
+        "# 최고가 보다 높을 경우 \"상승장\", 그렇지 않은 경우 \"하락장\" 문자열을 출력하라.\n",
+        "# \n",
+        "# ==================================================\n",
+        "# Key Name\tDescription\n",
+        "# --------------------------------------------------\n",
+        "# opening_price\t    시가:   24시간 내 시작 거래금액\n",
+        "# closing_price\t    종가:   24시간 내 마감 거래금액\n",
+        "# min_price\t        최저가: 24시간 내 최저 거래금액\n",
+        "# max_price\t        최고가: 24시간 내 최고 거래금액\n",
+        "# ==================================================\n",
         "\n",
+        "import requests\n",
+        "btc = requests.get(\"https://api.bithumb.com/public/ticker/\").json()['data']\n",
+        "# print(btc)\n",
         "\n",
-        "# 여기에 코드를 넣으세요. \n",
-        "num = int(input(\"숫자를 입력하세요:\"))\n",
-        "if num%2 == 0:\n",
-        "  print(\"짝수입니다\")\n",
+        "differencePrice = int(btc['max_price']) - int(btc['min_price'])\n",
+        "if int(btc['opening_price']) + differencePrice > int(btc['max_price']) :\n",
+        "    print(\"상승장\")\n",
         "else :\n",
-        "  print(\"홀수입니다\")"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "6WTiWGvYXyLj",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "# Q-3. 숫자를 입력받은 후 20을 더한 값을 출력하세요. 단, 최소는 0 최대는 100 입니다. \n",
-        "# 즉, 100 이상의 값은 100 으로 출력합니다. \n",
-        "# input() 함수를 사용합니다. \n",
-        "# \"숫자를 입력하세요 :\" 라는 문구가 출력된 후 수를 입력받습니다.\n",
-        "\n",
-        "\n",
-        "# 여기에 코드를 넣으세요.\n",
-        "num = int(input(\"숫자를 입력하세요:\"))\n",
-        "if num+20 >= 100:\n",
-        "  print(100)\n",
-        "else :\n",
-        "  print(num+20)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "-wPSPIv_Xz_G",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "# Q-4. 현재 시간을 입력받아, 24:00 까지 남은 시간을 분단위로 표시하세요.\n",
-        "#     - 23:30 을 입력했으면 30분을 표시\n",
-        "#     - 22:00 을 입력했으면 120분을 표시\n",
-        "# 시간은 hh:mm 형태로 입력받습니다. 00 부터 23시까지 시간을 표시하고,\n",
-        "# 분은 0 분부터 59분까지 표시됩니다. \n",
-        "# input() 함수를 사용합니다. \n",
-        "# \"현재 시간을 입력하세요 :\" 라는 문구가 출력된 후 시간을 입력받습니다.\n",
-        "# (P.S. 아직 에러처리는 신경쓰지 마세요.)\n",
-        "# \"24:00까지 ### 분 남았습니다\" 를 출력합니다.\n",
-        "\n",
-        "# 여기에 코드를 넣으세요.\n",
-        "myTime = input(\"현재 시간을 입력하세요:\")\n",
-        "\n",
-        "userHour = int(myTime[0:2])\n",
-        "userMin = int(myTime[3:])\n",
-        "timeGap = (24-userHour)*60 - userMin\n",
-        "\n",
-        "print(\"24:00 까지 {}분 남았습니다\".format(timeGap))"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "iSgkSYcmX0Em",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "cell_type": "code",
-      "source": [
-        "# Q-5. 위 4번 코드를 수정해서 22:00 에서 06:00 사이에는 \"지금은 수면시간입니다\"를 출력하도록 코드를 수정해보세요. \n",
-        "\n",
-        "# 여기에 코드를 넣으세요.\n",
-        "myTime = input(\"현재 시간을 입력하세요:\")\n",
-        "\n",
-        "userHour = int(myTime[0:2])\n",
-        "userMin = int(myTime[3:])\n",
-        "timeGap = (24-userHour)*60 - userMin\n",
-        "\n",
-        "print(\"24:00 까지 {}분 남았습니다\".format(timeGap))\n",
-        "\n",
-        "if (timeGap <= 120) or (timeGap >= 18*60):\n",
-        "  print(\"지금은 수면시간입니다.\")\n",
+        "    print(\"하락장\")\n",
         "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "상승장\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
